--- a/Coursework/Set Exercises/Comp2000-sx2/.runtime/projectInfo.html
+++ b/Coursework/Set Exercises/Comp2000-sx2/.runtime/projectInfo.html
@@ -48,7 +48,7 @@
 			</tr>
 			<tr>
 				<td class="label">Path:</td>
-				<td>C:\Users\ramon\OneDrive\Documents\GitHub\COMP2000-Classwork\Coursework\Set Exercises\Comp2000 SECW</td>
+				<td>C:\Users\ramon\OneDrive\Documents\GitHub\COMP2000-Classwork\Coursework\Set Exercises\Comp2000-sx2</td>
 			</tr>
 			<tr style="display: none;">
 				<td class="label">Remote location:</td>
@@ -60,7 +60,7 @@
 			</tr>
 			<tr>
 				<td class="label">Last modification:</td>
-				<td>12-08-2020 14:05:15</td>
+				<td>12-08-2020 20:44:55</td>
 			</tr>
 		</table>
 	</section>
